--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
