--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.79.3",
     "react-navigation": "^5.0.0",
     "react-native-screens": "~4.11.1",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
