--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-navigation": "^5.0.0",
     "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-notifications": "~0.31.3",
+    "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
