--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
+    "eas-cli": "^16.12.0",
     "expo": "~53.0.10",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.1",
+    "expo-device": "~7.1.4",
+    "expo-notifications": "~0.31.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-navigation": "^5.0.0",
-    "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-notifications": "~0.31.3",
-    "expo-constants": "~17.1.6",
-    "expo-device": "~7.1.4"
+    "react-native-screens": "~4.11.1",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
