--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.19",
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
     "eas-cli": "^16.12.0",
@@ -22,6 +23,7 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-navigation": "^5.0.0"
