--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-animatable": "^1.4.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
